--- a/Invoice tracking Bakend/requirements.txt
+++ b/Invoice tracking Bakend/requirements.txt
@@ -24,3 +24,38 @@ Pillow==10.1.0
 # Additional utilities
 python-dateutil==2.8.2
 requests==2.31.0
+
+# AI and Machine Learning
+scikit-learn==1.3.2
+joblib==1.3.2
+numpy==1.24.3
+pandas==2.0.3
+
+# Enhanced OCR and Image Processing
+opencv-python-headless==4.8.1.78
+Pillow==10.1.0
+pytesseract==0.3.10
+
+# Security and Encryption
+cryptography==41.0.7
+bcrypt==4.1.2
+
+# Performance and Caching
+django-redis==5.4.0
+redis==5.0.1
+
+# Monitoring and Logging
+django-extensions==3.2.3
+django-debug-toolbar==4.2.0
+
+# API Documentation
+drf-spectacular==0.26.5
+
+# Background Tasks
+celery[redis]==5.3.4
+django-celery-beat==2.5.0
+django-celery-results==2.5.1
+
+# Environment Management
+python-decouple==3.8
+environs==10.0.0
